force-app/main/default/objects/BAMContactApplication__c/BAMContactApplication__c.object-meta.xml
<CustomObject>
    <description>Stores a relationship between Contact and Merchant Portal application. This determines which applications are available to a particular contact when using Merchant Portal</description>
    <label>Merchant Portal Contact Application</label>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Merchant Portal Contact Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Portal Contact Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>