force-app/main/default/objects/BAMContactApplication__c/fields/AppKey__c.field-meta.xml
<CustomField>
    <fullName>AppKey__c</fullName>
    <description>Stores the value of the Application&apos;s key. This is necessary since sharing rules do not currently support formula fields and certain teams require edit access to their respective records.</description>
    <inlineHelpText>Stores the value of the Application&apos;s key. This is necessary since sharing rules do not currently support formula fields and certain teams require edit access to their respective records.</inlineHelpText>
    <label>App Key (For Sharing Rules)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>