force-app/main/default/objects/BAMContactApplication__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The application assigned to the contact</description>
    <label>Application</label>
    <referenceTo>BAMApplication__c</referenceTo>
    <relationshipName>ContactApplications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>