force-app/main/default/objects/BAMContactApplication__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact the application is associated to</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ContactApplications</relationshipName>
    <type>Lookup</type>
</CustomField>