force-app/main/default/objects/BAMContactApplication__c/fields/Pending_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Pending_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a deactivation request has been sent to Camunda for the Contact Application. When deactivation has been confirmed the record status will be set to &apos;Inactive&apos;.</description>
    <label>Pending Deactivation</label>
    <type>Checkbox</type>
</CustomField>