force-app/main/default/objects/BAMContactApplication__c/fields/Pending_Delete__c.field-meta.xml
<CustomField>
    <fullName>Pending_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a deprovisioning request has been sent to Camunda for the Contact Application. When deprovisioning has been confirmed the record will be deleted.</description>
    <label>Pending Delete</label>
    <type>Checkbox</type>
</CustomField>