force-app/main/default/objects/BAMContactApplication__c/listViews/Avo.listView-meta.xml
<ListView>
    <fullName>Avo</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>startsWith</operation>
        <value>Avo</value>
    </filters>
    <label>Avo</label>
    <language>en_US</language>
</ListView>