force-app/main/default/objects/BAMContactApplication__c/listViews/Today_Created.listView-meta.xml
<ListView>
    <fullName>Today_Created</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Application__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today - Created</label>
    <language>en_US</language>
</ListView>